--- a/frontend/public/output.css
+++ b/frontend/public/output.css
@@ -231,6 +231,11 @@
   margin-bottom: auto !important;
 }
 
+.my-4 {
+  margin-top: 1rem !important;
+  margin-bottom: 1rem !important;
+}
+
 .-mr-1 {
   margin-right: -0.25rem !important;
 }
