--- a/frontend/public/output.css
+++ b/frontend/public/output.css
@@ -155,6 +155,14 @@
   top: 5px !important;
 }
 
+.right-1 {
+  right: 0.25rem !important;
+}
+
+.top-1 {
+  top: 0.25rem !important;
+}
+
 .isolate {
   isolation: isolate !important;
 }
@@ -216,6 +224,11 @@
   margin-bottom: 0.75rem !important;
 }
 
+.my-4 {
+  margin-top: 1rem !important;
+  margin-bottom: 1rem !important;
+}
+
 .my-5 {
   margin-top: 1.25rem !important;
   margin-bottom: 1.25rem !important;
@@ -229,11 +242,6 @@
 .my-auto {
   margin-top: auto !important;
   margin-bottom: auto !important;
-}
-
-.my-4 {
-  margin-top: 1rem !important;
-  margin-bottom: 1rem !important;
 }
 
 .-mr-1 {
@@ -445,6 +453,14 @@
   height: 100vh !important;
 }
 
+.h-32 {
+  height: 8rem !important;
+}
+
+.h-4 {
+  height: 1rem !important;
+}
+
 .max-h-\[350px\] {
   max-height: 350px !important;
 }
@@ -541,6 +557,10 @@
   width: 100% !important;
 }
 
+.w-4 {
+  width: 1rem !important;
+}
+
 .min-w-\[90\%\] {
   min-width: 90% !important;
 }
@@ -623,6 +643,10 @@
 
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
 }
 
 .flex-col {
@@ -823,6 +847,16 @@
   border-color: rgb(107 114 128 / var(--tw-border-opacity)) !important;
 }
 
+.border-gray-600 {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(75 85 99 / var(--tw-border-opacity)) !important;
+}
+
+.border-red-500 {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity)) !important;
+}
+
 .border-b-\[\#585858\] {
   --tw-border-opacity: 1 !important;
   border-bottom-color: rgb(88 88 88 / var(--tw-border-opacity)) !important;
@@ -960,6 +994,11 @@
   background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity)) !important;
+}
+
 .bg-opacity-30 {
   --tw-bg-opacity: 0.3 !important;
 }
@@ -970,6 +1009,10 @@
 
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5 !important;
+}
+
+.bg-opacity-70 {
+  --tw-bg-opacity: 0.7 !important;
 }
 
 .object-contain {
@@ -1116,6 +1159,10 @@
 
 .text-center {
   text-align: center !important;
+}
+
+.text-right {
+  text-align: right !important;
 }
 
 .text-start {
@@ -1306,6 +1353,10 @@
   opacity: 0.75 !important;
 }
 
+.opacity-90 {
+  opacity: 0.9 !important;
+}
+
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1) !important;
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color) !important;
@@ -1348,8 +1399,19 @@
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000) !important;
 }
 
+.ring-2 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color) !important;
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color) !important;
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000) !important;
+}
+
 .ring-black\/5 {
   --tw-ring-color: rgb(0 0 0 / 0.05) !important;
+}
+
+.ring-red-500 {
+  --tw-ring-opacity: 1 !important;
+  --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity)) !important;
 }
 
 .filter {
