#259 Added unit testing for some profile components

--- a/frontend/public/output.css
+++ b/frontend/public/output.css
@@ -115,6 +115,10 @@
   pointer-events: none !important;
 }
 
+.static {
+  position: static !important;
+}
+
 .fixed {
   position: fixed !important;
 }
