--- a/frontend/public/output.css
+++ b/frontend/public/output.css
@@ -187,11 +187,6 @@
   margin: 0px !important;
 }
 
-.mx-1\.5 {
-  margin-left: 0.375rem !important;
-  margin-right: 0.375rem !important;
-}
-
 .mx-2 {
   margin-left: 0.5rem !important;
   margin-right: 0.5rem !important;
@@ -222,6 +217,11 @@
   margin-bottom: 2.5rem !important;
 }
 
+.my-14 {
+  margin-top: 3.5rem !important;
+  margin-bottom: 3.5rem !important;
+}
+
 .my-2 {
   margin-top: 0.5rem !important;
   margin-bottom: 0.5rem !important;
@@ -250,11 +250,6 @@
 .my-auto {
   margin-top: auto !important;
   margin-bottom: auto !important;
-}
-
-.my-16 {
-  margin-top: 4rem !important;
-  margin-bottom: 4rem !important;
 }
 
 .-mr-1 {
@@ -345,8 +340,16 @@
   margin-top: 0.25rem !important;
 }
 
+.mt-10 {
+  margin-top: 2.5rem !important;
+}
+
 .mt-2 {
   margin-top: 0.5rem !important;
+}
+
+.mt-3 {
+  margin-top: 0.75rem !important;
 }
 
 .mt-4 {
@@ -367,26 +370,6 @@
 
 .mt-\[17px\] {
   margin-top: 17px !important;
-}
-
-.mt-3 {
-  margin-top: 0.75rem !important;
-}
-
-.mb-0 {
-  margin-bottom: 0px !important;
-}
-
-.mt-11 {
-  margin-top: 2.75rem !important;
-}
-
-.mt-24 {
-  margin-top: 6rem !important;
-}
-
-.mt-12 {
-  margin-top: 3rem !important;
 }
 
 .block {
@@ -466,6 +449,10 @@
   height: 30px !important;
 }
 
+.h-\[47vh\] {
+  height: 47vh !important;
+}
+
 .h-\[50px\] {
   height: 50px !important;
 }
@@ -506,6 +493,10 @@
   max-height: 90vh !important;
 }
 
+.max-h-full {
+  max-height: 100% !important;
+}
+
 .min-h-\[3\.25rem\] {
   min-height: 3.25rem !important;
 }
@@ -516,18 +507,6 @@
 
 .min-h-screen {
   min-height: 100vh !important;
-}
-
-.min-h-4 {
-  min-height: 1rem !important;
-}
-
-.min-h-2 {
-  min-height: 0.5rem !important;
-}
-
-.min-h-8 {
-  min-height: 2rem !important;
 }
 
 .w-12 {
@@ -606,6 +585,10 @@
   max-width: 56rem !important;
 }
 
+.max-w-7xl {
+  max-width: 80rem !important;
+}
+
 .max-w-\[70\%\] {
   max-width: 70% !important;
 }
@@ -624,10 +607,6 @@
 
 .max-w-md {
   max-width: 28rem !important;
-}
-
-.max-w-7xl {
-  max-width: 80rem !important;
 }
 
 .flex-1 {
@@ -751,6 +730,12 @@
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse)) !important;
 }
 
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0 !important;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse))) !important;
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse)) !important;
+}
+
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0 !important;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse))) !important;
@@ -781,12 +766,6 @@
   margin-bottom: calc(2.25rem * var(--tw-space-y-reverse)) !important;
 }
 
-.space-y-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0 !important;
-  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse))) !important;
-  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse)) !important;
-}
-
 .self-end {
   align-self: flex-end !important;
 }
@@ -797,6 +776,10 @@
 
 .overflow-y-auto {
   overflow-y: auto !important;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden !important;
 }
 
 .break-words {
@@ -878,6 +861,11 @@
   border-color: rgb(20 20 20 / var(--tw-border-opacity)) !important;
 }
 
+.border-\[\#1b2a44\] {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(27 42 68 / var(--tw-border-opacity)) !important;
+}
+
 .border-\[\#272727\] {
   --tw-border-opacity: 1 !important;
   border-color: rgb(39 39 39 / var(--tw-border-opacity)) !important;
@@ -896,11 +884,6 @@
 .border-gray-500 {
   --tw-border-opacity: 1 !important;
   border-color: rgb(107 114 128 / var(--tw-border-opacity)) !important;
-}
-
-.border-\[\#1b2a44\] {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(27 42 68 / var(--tw-border-opacity)) !important;
 }
 
 .border-b-\[\#585858\] {
@@ -923,8 +906,18 @@
   border-top-color: rgb(34 34 34 / var(--tw-border-opacity)) !important;
 }
 
+.bg-\[\#0b1220\] {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(11 18 32 / var(--tw-bg-opacity)) !important;
+}
+
 .bg-\[\#0e172ab8\] {
   background-color: #0e172ab8 !important;
+}
+
+.bg-\[\#0f1a2e\] {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(15 26 46 / var(--tw-bg-opacity)) !important;
 }
 
 .bg-\[\#121212\] {
@@ -967,6 +960,11 @@
   background-color: rgb(39 39 39 / var(--tw-bg-opacity)) !important;
 }
 
+.bg-\[\#2fd07f\] {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(47 208 127 / var(--tw-bg-opacity)) !important;
+}
+
 .bg-\[\#303030\] {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(48 48 48 / var(--tw-bg-opacity)) !important;
@@ -980,10 +978,6 @@
 .bg-\[\#3a0000\] {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(58 0 0 / var(--tw-bg-opacity)) !important;
-}
-
-.bg-\[\#ffffff19\] {
-  background-color: #ffffff19 !important;
 }
 
 .bg-black {
@@ -1011,11 +1005,6 @@
   background-color: rgb(55 65 81 / var(--tw-bg-opacity)) !important;
 }
 
-.bg-gray-900 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity)) !important;
-}
-
 .bg-green-600 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(22 163 74 / var(--tw-bg-opacity)) !important;
@@ -1026,11 +1015,6 @@
   background-color: rgb(220 38 38 / var(--tw-bg-opacity)) !important;
 }
 
-.bg-teal-400 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(45 212 191 / var(--tw-bg-opacity)) !important;
-}
-
 .bg-transparent {
   background-color: transparent !important;
 }
@@ -1038,21 +1022,6 @@
 .bg-white {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
-}
-
-.bg-\[\#0b1220\] {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(11 18 32 / var(--tw-bg-opacity)) !important;
-}
-
-.bg-\[\#0f1a2e\] {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(15 26 46 / var(--tw-bg-opacity)) !important;
-}
-
-.bg-\[\#2fd07f\] {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(47 208 127 / var(--tw-bg-opacity)) !important;
 }
 
 .bg-opacity-30 {
@@ -1126,11 +1095,6 @@
   padding-right: 0.25rem !important;
 }
 
-.px-2 {
-  padding-left: 0.5rem !important;
-  padding-right: 0.5rem !important;
-}
-
 .px-3 {
   padding-left: 0.75rem !important;
   padding-right: 0.75rem !important;
@@ -1161,19 +1125,9 @@
   padding-bottom: 0.25rem !important;
 }
 
-.py-16 {
-  padding-top: 4rem !important;
-  padding-bottom: 4rem !important;
-}
-
 .py-2 {
   padding-top: 0.5rem !important;
   padding-bottom: 0.5rem !important;
-}
-
-.py-2\.5 {
-  padding-top: 0.625rem !important;
-  padding-bottom: 0.625rem !important;
 }
 
 .py-4 {
@@ -1186,16 +1140,6 @@
   padding-bottom: 1.25rem !important;
 }
 
-.py-7 {
-  padding-top: 1.75rem !important;
-  padding-bottom: 1.75rem !important;
-}
-
-.py-12 {
-  padding-top: 3rem !important;
-  padding-bottom: 3rem !important;
-}
-
 .py-6 {
   padding-top: 1.5rem !important;
   padding-bottom: 1.5rem !important;
@@ -1203,10 +1147,6 @@
 
 .pb-3 {
   padding-bottom: 0.75rem !important;
-}
-
-.pb-8 {
-  padding-bottom: 2rem !important;
 }
 
 .pl-6 {
@@ -1225,36 +1165,8 @@
   padding-right: 1.25rem !important;
 }
 
-.pt-2 {
-  padding-top: 0.5rem !important;
-}
-
 .pt-3 {
   padding-top: 0.75rem !important;
-}
-
-.pt-\[30vh\] {
-  padding-top: 30vh !important;
-}
-
-.pt-\[70vh\] {
-  padding-top: 70vh !important;
-}
-
-.pt-\[50vh\] {
-  padding-top: 50vh !important;
-}
-
-.pt-\[20vh\] {
-  padding-top: 20vh !important;
-}
-
-.pt-8 {
-  padding-top: 2rem !important;
-}
-
-.pt-12 {
-  padding-top: 3rem !important;
 }
 
 .text-left {
@@ -1267,10 +1179,6 @@
 
 .text-start {
   text-align: start !important;
-}
-
-.font-\[Poppins\] {
-  font-family: Poppins !important;
 }
 
 .font-mono {
@@ -1348,16 +1256,22 @@
   font-weight: 600 !important;
 }
 
-.leading-6 {
-  line-height: 1.5rem !important;
-}
-
 .leading-relaxed {
   line-height: 1.625 !important;
 }
 
 .tracking-wide {
   letter-spacing: 0.025em !important;
+}
+
+.text-\[\#0b1220\] {
+  --tw-text-opacity: 1 !important;
+  color: rgb(11 18 32 / var(--tw-text-opacity)) !important;
+}
+
+.text-\[\#2fd07f\] {
+  --tw-text-opacity: 1 !important;
+  color: rgb(47 208 127 / var(--tw-text-opacity)) !important;
 }
 
 .text-\[\#999\] {
@@ -1410,11 +1324,6 @@
   color: rgb(55 65 81 / var(--tw-text-opacity)) !important;
 }
 
-.text-gray-800 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(31 41 55 / var(--tw-text-opacity)) !important;
-}
-
 .text-gray-900 {
   --tw-text-opacity: 1 !important;
   color: rgb(17 24 39 / var(--tw-text-opacity)) !important;
@@ -1455,16 +1364,6 @@
   color: rgb(226 232 240 / var(--tw-text-opacity)) !important;
 }
 
-.text-teal-400 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(45 212 191 / var(--tw-text-opacity)) !important;
-}
-
-.text-teal-500 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(20 184 166 / var(--tw-text-opacity)) !important;
-}
-
 .text-white {
   --tw-text-opacity: 1 !important;
   color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
@@ -1478,16 +1377,6 @@
 .text-yellow-600 {
   --tw-text-opacity: 1 !important;
   color: rgb(202 138 4 / var(--tw-text-opacity)) !important;
-}
-
-.text-\[\#0b1220\] {
-  --tw-text-opacity: 1 !important;
-  color: rgb(11 18 32 / var(--tw-text-opacity)) !important;
-}
-
-.text-\[\#2fd07f\] {
-  --tw-text-opacity: 1 !important;
-  color: rgb(47 208 127 / var(--tw-text-opacity)) !important;
 }
 
 .placeholder-gray-500::-moz-placeholder {
@@ -1599,9 +1488,58 @@
   transition-duration: 300ms !important;
 }
 
+.scrollbar-thin::-webkit-scrollbar-track {
+  background-color: var(--scrollbar-track) !important;
+  border-radius: var(--scrollbar-track-radius) !important;
+}
+
+.scrollbar-thin::-webkit-scrollbar-track:hover {
+  background-color: var(--scrollbar-track-hover, var(--scrollbar-track)) !important;
+}
+
+.scrollbar-thin::-webkit-scrollbar-track:active {
+  background-color: var(--scrollbar-track-active, var(--scrollbar-track-hover, var(--scrollbar-track))) !important;
+}
+
+.scrollbar-thin::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar-thumb) !important;
+  border-radius: var(--scrollbar-thumb-radius) !important;
+}
+
+.scrollbar-thin::-webkit-scrollbar-thumb:hover {
+  background-color: var(--scrollbar-thumb-hover, var(--scrollbar-thumb)) !important;
+}
+
+.scrollbar-thin::-webkit-scrollbar-thumb:active {
+  background-color: var(--scrollbar-thumb-active, var(--scrollbar-thumb-hover, var(--scrollbar-thumb))) !important;
+}
+
+.scrollbar-thin::-webkit-scrollbar-corner {
+  background-color: var(--scrollbar-corner) !important;
+  border-radius: var(--scrollbar-corner-radius) !important;
+}
+
+.scrollbar-thin::-webkit-scrollbar-corner:hover {
+  background-color: var(--scrollbar-corner-hover, var(--scrollbar-corner)) !important;
+}
+
+.scrollbar-thin::-webkit-scrollbar-corner:active {
+  background-color: var(--scrollbar-corner-active, var(--scrollbar-corner-hover, var(--scrollbar-corner))) !important;
+}
+
+.scrollbar-thin {
+  scrollbar-width: thin !important;
+  scrollbar-color: var(--scrollbar-thumb, initial) var(--scrollbar-track, initial) !important;
+}
+
+.scrollbar-thin::-webkit-scrollbar {
+  display: block !important;
+  width: 8px !important;
+  height: 8px !important;
+}
+
 body {
   background-color: rgb(17 24 39);
-  width: 100%;
   margin: 0;
 }
 
@@ -1773,6 +1711,11 @@ h1:focus-visible {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1) !important;
 }
 
+.hover\:bg-\[\#1eb36a\]:hover {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(30 179 106 / var(--tw-bg-opacity)) !important;
+}
+
 .hover\:bg-\[\#333\]:hover {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(51 51 51 / var(--tw-bg-opacity)) !important;
@@ -1786,26 +1729,6 @@ h1:focus-visible {
 .hover\:bg-red-700:hover {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(185 28 28 / var(--tw-bg-opacity)) !important;
-}
-
-.hover\:bg-teal-500:hover {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(20 184 166 / var(--tw-bg-opacity)) !important;
-}
-
-.hover\:bg-\[\#1eb36a\]:hover {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(30 179 106 / var(--tw-bg-opacity)) !important;
-}
-
-.hover\:text-gray-100:hover {
-  --tw-text-opacity: 1 !important;
-  color: rgb(243 244 246 / var(--tw-text-opacity)) !important;
-}
-
-.hover\:text-teal-400:hover {
-  --tw-text-opacity: 1 !important;
-  color: rgb(45 212 191 / var(--tw-text-opacity)) !important;
 }
 
 .hover\:text-\[\#1eb36a\]:hover {
@@ -1845,20 +1768,8 @@ h1:focus-visible {
 }
 
 @media (min-width: 640px) {
-  .sm\:mr-5 {
-    margin-right: 1.25rem !important;
-  }
-
   .sm\:w-1\/2 {
     width: 50% !important;
-  }
-
-  .sm\:w-72 {
-    width: 18rem !important;
-  }
-
-  .sm\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
   }
 
   .sm\:grid-cols-3 {
@@ -1868,41 +1779,15 @@ h1:focus-visible {
   .sm\:flex-nowrap {
     flex-wrap: nowrap !important;
   }
-
-  .sm\:px-12 {
-    padding-left: 3rem !important;
-    padding-right: 3rem !important;
-  }
-
-  .sm\:px-8 {
-    padding-left: 2rem !important;
-    padding-right: 2rem !important;
-  }
 }
 
 @media (min-width: 768px) {
-  .md\:mb-0 {
-    margin-bottom: 0px !important;
-  }
-
-  .md\:flex {
-    display: flex !important;
-  }
-
   .md\:w-1\/4 {
     width: 25% !important;
   }
 
-  .md\:w-2\/5 {
-    width: 40% !important;
-  }
-
   .md\:w-\[225px\] {
     width: 225px !important;
-  }
-
-  .md\:w-auto {
-    width: auto !important;
   }
 
   .md\:max-w-lg {
@@ -1921,47 +1806,18 @@ h1:focus-visible {
     flex-direction: row !important;
   }
 
-  .md\:items-center {
-    align-items: center !important;
-  }
-
-  .md\:justify-between {
-    justify-content: space-between !important;
-  }
-
   .md\:p-5 {
     padding: 1.25rem !important;
   }
 }
 
 @media (min-width: 1024px) {
-  .lg\:mb-0 {
-    margin-bottom: 0px !important;
-  }
-
   .lg\:w-80 {
     width: 20rem !important;
   }
 
   .lg\:max-w-xl {
     max-width: 36rem !important;
-  }
-
-  .lg\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
-  }
-
-  .lg\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr)) !important;
-  }
-
-  .lg\:text-4xl {
-    font-size: 2.25rem !important;
-    line-height: 2.5rem !important;
-  }
-
-  .lg\:leading-normal {
-    line-height: 1.5 !important;
   }
 }
 
